# angel

./: .gitignore  LICENSE  README.md  TODO.md  index.html  package.json
.github/workflows/: build-and-release.yml
docs/: spec.md
scripts/: com.angel.app.plist  install.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/anthropic/: mod.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/classify/: mod.rs
src-tauri/src/pushback/: mod.rs
src-tauri/src/secrets/: mod.rs
src-tauri/src/state_model/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: WorkItemCard.tsx
